--- a/JTB_ms/JTB_ms.tex
+++ b/JTB_ms/JTB_ms.tex
@@ -88,10 +88,10 @@
 
   \title{A dynamic bioenergetic model for coral-\emph{Symbiodinium} symbioses and
 coral bleaching as an alternate stable state}
-    \author[University of Hawaii]{Ross Cunning\corref{c1}}
+    \author[HIMB]{Ross Cunning\corref{c1}}
    \ead{ross.cunning@gmail.com} 
    \cortext[c1]{Corresponding Author}
-    \author[UCSB, MSI]{Erik B. Muller}
+    \author[UCSB,MSI]{Erik B. Muller}
   
   
     \author[HIMB]{Ruth D. Gates}
@@ -1663,6 +1663,11 @@ theoretical backgrounds. Ultimately, the continued refinement of these
 tools is fundamental in elucidating the mechanisms of symbiosis function
 and dysfunction, and in predicting coral responses to environmental
 change.
+
+\section{Acknowledgements}\label{acknowledgements}
+
+This work was supported by a NSF Postdoctoral Research Fellowship in
+Biology to RC (\#1400787).
 
 \section*{References}\label{references}
 \addcontentsline{toc}{section}{References}
