--- a/ms/ms.Rmd
+++ b/ms/ms.Rmd
@@ -34,8 +34,7 @@ knitr::opts_knit$set(root.dir = normalizePath(".."))
 # Source metrics reported in text
 source("R/reported_metrics.R")
 # Source default parameter values
-source("R/def_pars.R")
-defpars <- def_pars()
+defpars <- coRal::def_pars()
 ```
 
 # Introduction
@@ -50,11 +49,12 @@ While the formal DEB model of @Muller:2009io represents the most significant the
 
 2. _Reduce theoretical and mathematical complexity._ Following the logic of @Jager:2013bj, we exclude certain features of formal DEB theory in order to capture behaviors of interest with the simplest possible formulation. Here, we present a model without reserves, maturity, or reproduction [see @Kooijman:2010vd]. This formulation precludes modeling the full life cycle of corals as reproduction, larval stages, and metamorphosis are not considered, but greatly reduces theoretical complexity and parameter numbers, which is advantageous given the relative paucity of data for corals. Moreover, dynamics of the symbiosis (i.e., changes in symbiont to host biomass, including bleaching and recovery) and coral biomass growth are efficiently captured with this simpler formulation, which also increases accessibility for biologists and ecologists without requiring expertise in DEB theory.
 
-3. _Provide well-documented, open source code._ In order to facilitate the continued development and application of theoretical modeling tools for coral symbioses, we provide open access to the model in the form of detailed, commented code written in the R language [@RALanguageandEn:2014wf]. With an accessible and modular framework, we envision this model as a resource for further development by the scientific community to include additional complexity and problem-specific components. We chose R, an open source programming language in common use by biologists and ecologists, to reach the widest possible audience with this work.
+3. _Provide well-documented, open source code._ In order to facilitate the continued development and application of theoretical modeling tools for coral symbioses, we provide access to the model in the form of an R package called coRal [github.com/jrcunning/coRal](github.com/jrcunning/coRal), which users may install to run and visualize model simulations. With an accessible and modular framework, we envision this code base as a resource for further development by the scientific community to include additional complexity and problem-specific components. We chose R [@RALanguageandEn:2014wf], an open source programming language in common use by biologists and ecologists, to reach the widest possible audience with this work.
 
 With these as our primary motivations, we describe a simplified approach to bioenergetic modeling of coral-*Symbiodinium* symbioses that dynamically integrates the influences of external irradiance, nutrients, and prey availability on coral growth and symbiosis dynamics (i.e., changes in symbiont:host biomass ratios), allowing for the possibility of coral bleaching in response to photooxidative stress. An emergent finding of this work is that coral bleaching can be interpreted as an alternate stable state of the symbiotic system, which provides a new framework for understanding the mechanisms that drive a coral into a bleached state, as well as those that facilitate recovery. In the following sections, we describe and provide rationale for the model structure, demonstrate a range of steady state and dynamic behaviors that are consistent with observed phenomena, and discuss new insights from this work in understanding responses of coral-*Symbiodinium* symbioses to environmental change.
 
 # Model description
+
 In this dynamical system, both the coral host and algal symbiont acquire and use carbon and nitrogen to construct biomass. The symbiont fixes carbon through photosynthesis and receives nitrogen shared by the host, while the host acquires nitrogen from the environment and receives carbon shared by the symbiont. A graphical representation of the model is presented in Fig. 1, and each model flux and parameter is defined in Tables 1 and 2, respectively. We use C-moles (C-mol) as the unit of biomass for consistency with the rigorous mass balance of DEB theory: 1 C-mol is equivalent to the amount of biomass containing 1 mole of carbon atoms. Host biomass (expressed as C-mol H), symbiont biomass (expressed as C-mol S), and prey biomass (expressed as C-mol X) have fixed, but different, molar N:C ratios (Table 2). Biomass is produced from carbon and nitrogen by synthesizing units (SU), which are mathematical specifications of the formation of a product from two substrates; we use the "parallel complementary" formulation of @Kooijman:2010vd (page 105, Fig. 3.7) to specify these fluxes. The two state variables of this system are symbiont biomass and coral biomass; because resources are acquired proportionally to surface area, and surface area is proportional to volume, biomass increases exponentially during growth (indeed, corals grow exponentially [@Bak:1976bv]). 
 
 Environmental stress is implemented in the form of photooxidative stress, which is thought to be a primary trigger of coral bleaching [@Lesser:1997p3587; @Weis:2008p944; @Wooldridge:2009p7807]. To simulate bleaching, we model the absorption and quenching of light energy by photochemistry and non-photochemical quenching, and the responses that occur (i.e., photoinhibition, photodamage, and symbiont loss) when these quenching capacities are overwhelmed. While bleaching in response to high light alone has been observed experimentally [@Schutter:2011ie; @Downs:2013kc], mass coral bleaching events occur concurrently with high temperature [@HoeghGuldberg:1999p4222]. Thus, it is important to justify our consideration of light as the primary stressor. In reality, light and temperature interact synergistically [@Coles:1978p1124; @Jones:1998p3572], and in fact, any stressor that disrupts the quenching of light energy may lead to bleaching [@Wooldridge:2010p7809; @Baker:2015kp]. This is because the proximate cause of photo-oxidative stress is excess excitation energy, but the upstream events that lead to this situation may be diverse. Indeed, elevated temperature may inhibit Rubisco functioning [@Jones:1998p3572] and the repair of the D1 protein in photosystem II [@Warner:1999p4239], which reduces the capacity of photochemical quenching and leads to an excess of light energy. In this way, elevated temperature serves to reduce the threshold above which light stresses the system [@HoeghGuldberg:1999p4222]; importantly, light is still the proximate stressor. Therefore, we omitted temperature from the model to maintain a desired level of simplicity, while still allowing photooxidative stress and bleaching to be simulated with biological realism in response to light.  
@@ -221,19 +221,20 @@ This second component of symbiont biomass loss represents both photodamage and/o
 [^2]: Note that recycling of symbiont biomass turnover ($rNS$ and $rCS$) only occurs based on the maintenance component of turnover (i.e., $j_{ST}^0$), and not the photodamage/bleaching component, as this loss represents biomass that is expelled from the host.
 [^3]: See footnote 2.
 
-## Numerical analysis
-
-The model dynamics are specified by the differential equations (1-2) that impose biomass balance for host and symbiont and by a set of coupled non-linear algebraic equations (3-22) that define fluxes. Several of these fluxes are defined *implicitly*; for example, the rejection fluxes of carbon and nitrogen from the symbiont and host biomass SUs, respectively, act as reciprocal input fluxes to the other SU. Similarly, the photosynthesis SU receives CO~2~ at a rate proportional to the carbon rejection flux from the host biomass SU, and the rejection flux of excitation energy from the photosynthesis SU acts to reduce its own production through photoinhibition. Without further assumptions, however, the dynamical system is not always unambiguously defined because for some combinations of parameters and environmental forcing functions the system of algebraic equations has more than one solution with all fluxes non-negative (see results below). In such circumstances, the right hand side of the differential equations (1) and (2) is not uniquely defined even when $S$ and $H$ are specified. We resolved this problem by *defining the dynamical system* as the limit as a time step $\Delta t \rightarrow 0$ of a discretized system corresponding to Euler integration of the differential equations, with those fluxes that represent flows of elemental matter implemented by assuming that transfer of material between components of the system takes one time step. Thus, for example, CO~2~ rejected from the host SU at time $t$ arrives at the photosynthesis SU at time $t + \Delta t$. 
-
-Simulations using the discretized scheme were performed using R code that is available in the data repository accompanying this article: github.com/jrcunning/Rcoral. By experimentation, we found that a time step of 0.1 days gave adequate precision for most simulations (including used to generate Figs. 2-8 in this paper). For steady state estimations, simulations were run until the change in specific growth rate of host and symbiont and the S:H biomass ratio was less than 1e-5 per time step. In regions of state space where very slow transient dynamics could be expected (i.e. near bifurcation points), sample steady state calculations were verified using MATHEMATICA code for numerical root finding (function FindRoot) with the code written independently by a coauthor without reference to the R code.
-
 To aid in visualizing model results, we calculated values to indicate the degree to which product formation at an SU was limited by availability of either of its two substrates using the formula
 
 \begin{equation} \log \bigg({{\min(j_{S1}, j_{Pm})} \over {\min(j_{S2}, j_{Pm})}}\bigg) \end{equation}
 
 where $j_{S1}$ and $j_{S2}$ are the specific input fluxes of the two substrates and $j_{Pm}$ is the maximum specific product formation rate, in units of Cmol Cmol^-1^ d^-1^. When both substrate input fluxes are higher than what can be used at the maximum production rate, this limitation coefficient is zero, implying that neither substrate is limiting production.
 
+## Numerical analysis
+
+The model dynamics are specified by the differential equations (1-2) that impose biomass balance for host and symbiont and by a set of coupled non-linear algebraic equations (3-22) that define fluxes. Several of these fluxes are defined *implicitly*; for example, the rejection fluxes of carbon and nitrogen from the symbiont and host biomass SUs, respectively, act as reciprocal input fluxes to the other SU. Similarly, the photosynthesis SU receives CO~2~ at a rate proportional to the carbon rejection flux from the host biomass SU, and the rejection flux of excitation energy from the photosynthesis SU acts to reduce its own production through photoinhibition. Without further assumptions, however, the dynamical system is not always unambiguously defined because for some combinations of parameters and environmental forcing functions the system of algebraic equations has more than one solution with all fluxes non-negative (see results below). In such circumstances, the right hand side of the differential equations (1) and (2) is not uniquely defined even when $S$ and $H$ are specified. We resolved this problem by *defining the dynamical system* as the limit as a time step $\Delta t \rightarrow 0$ of a discretized system corresponding to Euler integration of the differential equations, with those fluxes that represent flows of elemental matter implemented by assuming that transfer of material between components of the system takes one time step. Thus, for example, CO~2~ rejected from the host SU at time $t$ arrives at the photosynthesis SU at time $t + \Delta t$. 
+
+Simulations using the discretized scheme were performed using R code developed in the coRal R package [github.com/jrcunning/coRal](github.com/jrcunning/coRal). By experimentation, we found that a time step of 0.1 days gave adequate precision for most simulations (including used to generate Figs. 2-8 in this paper). For steady state estimations, simulations were run until the changes in specific growth rate of the host and the S:H biomass ratio were less than 1e-5 per time step. In regions of state space where very slow transient dynamics could be expected (i.e. near bifurcation points), sample steady state calculations were verified using MATHEMATICA code for numerical root finding (function FindRoot) with the code written independently by a coauthor without reference to the R code. All of the R code for the simulations and figures presented in this paper can be found in the accompanying data repository at [github.com/jrcunning/coRal-analysis](github.com/jrcunning/coRal-analysis).
+
 # Steady state behavior
+
 In a constant environment, the system ultimately reaches a steady state of exponential growth or decline. However, under some conditions, either of these outcomes may occur depending on initial values of symbiont and host biomass, indicating the presence of alternate stable states (Fig. 2). The mechanism that produces these alternate stable states is the positive feedback between carbon-limitation of the host and CO~2~-limitation of photosynthesis: if symbiont biomass is initially very low (i.e., a "bleached" coral), very little carbon is fixed, and the system cannot escape this positive feedback and cannot grow (unless feeding is sufficiently high). However, if symbiont biomass is initially high (i.e., a "healthy" coral), then the system remains in a nitrogen-limited state with positive growth. For practical purposes, this section of the manuscript considers only positive growth steady states under constant environments; subsequently, we explore how environmental forcing may cause the system to switch between alternate stable states, which we interpret in the context of coral bleaching (see "Coral Bleaching and Recovery", below).
 
 ![Alternate stable states in S:H biomass and growth across a light gradient. Alternate stable states occur between ~25-42 mol photons m^-2^ d^-1^ under these conditions (DIN=1e-7 mol N L^-1^; X=1e-7 C-mol X L^-1^), depending on whether initial S:H is high (1, closed circles), representing a healthy coral, or low (0.0001, open circles), representing a bleached coral. Arrow above point at L=25 indicates a S:H ratio beyond the axis range; this 'overshoot' phenomenon, in which initially  bleached corals may achieve high S:H ratios while remaining in a carbon-limited state is discussed in the *Coral Bleaching and Recovery* section.](../img/Fig2.png)
@@ -260,9 +261,11 @@ The values used for each parameter in the model (Table 2) are derived from relev
 Overall, relative changes in the steady state of the system are less than the equivalent relative change in parameter value. However, changes in certain parameter values have more significant impacts: increasing $j_{Nm}$ or decreasing $K_N$ both dramatically increase host growth (Fig. 4), demonstrating the strong nitrogen-limitation that characterizes these symbioses. The parameter $\bar{a}^*$ has a strong impact on S:H biomass ratios (Fig. 4) since this parameter determines the amount of light absorbed by symbionts, with lower values increasing light-limitation. Increasing the maximum growth and turnover rates have the expected effects of increasing and decreasing growth, respectively. Parameters relating to photooxidative stress and bleaching have little impact under low nutrients and intermediate light (Fig. 4), but have larger impacts under higher light (e.g., Fig. S6). Sensitivity analyses conducted under different combinations of external light and nutrients are presented in Figs. S3-S7.
 
 # Dynamic behavior
+
 The dynamic behavior of the model demonstrates its power to integrate multiple environmental forcings simultaneously. Here we present several scenarios that demonstrate the model's ability to reproduce complex phenomena that have been observed in corals.
 
 ## Seasonal variability
+
 Symbiont densities and coral growth rates are known to vary seasonally, representing an integrated response to changes in a suite of environmental factors. Light in particular is a strong driver of these trends [@Stimson:1997p3837; @Brown:1999p3534; @Fagoonee:1999p4136; @Fitt:2000p3792], with high light associated with lower symbiont abundance and reduced tissue biomass. The role of light in driving seasonal changes in symbiont density was demonstrated nicely by @Stimson:1997p3837, who also found that experimental nutrient-enrichment amplified the light-driven seasonal oscillation. Using the levels of light and nutrients from this study as inputs, the model reproduces this observed interaction among environmental factors (Fig. 5), and also provides the mechanism: increasing light in summer decreases symbiont growth rates due to photooxidative stress, leading to decreasing S:H ratios. Under nutrient enrichment, this effect is more pronounced, as CO~2~-limitation of photosynthesis (due to higher symbiont standing stocks) causes mild bleaching that results in a similar summertime minimum S:H as the ambient nutrient case ('physiological bleaching' *sensu* @Fitt:2001p832). Decreasing light into winter then alleviates the photooxidative stress constraints on carbon fixation such that nitrogen-limitation constrains the S:H ratio, explaining why S:H increases more when DIN is enriched (Fig. S8).
 
 ![Light-driven seasonal dynamics of symbiont abundance and coral growth. Light input (upper panel) was designed as a sinusoidal curve with a period of one year, with maximum and minimum values of 44 and 20 mol photons m^-2^ d^-1^, corresponding to those measured by @Stimson:1997p3837. The dynamic behavior of symbiont to host biomass ratio (middle panel) and the specific growth rate of host biomass (lower panel) show seasonal oscillations that are greater in magnitude under high nutrients (15.14 $\mu$M N; dashed lines) relative to low nutrients (0.14 $\mu$M N; solid lines), consistent with the findings of @Stimson:1997p3837. Prey density was set at 1e-6 CmolX L^-1^.](../img/Fig5.png)
@@ -273,6 +276,7 @@ The prediction of higher growth when light is reduced indicates that growth is n
 [^5]: See footnote 4.
 
 ## Coral bleaching and recovery
+
 Coral bleaching is the stress-induced loss of symbiotic algae from coral tissues, which can occur in response to a variety of environmental stressors. In most cases, coral bleaching is thought to begin with photooxidative stress in symbiont photosynthesis [@Lesser:1997p3587], which triggers a cascade of events leading to symbiont expulsion [@Weis:2008p944]. As symbionts are expelled, the host receives less fixed carbon, which may then compromise its ability to activate CCMs that deliver CO~2~ to photosynthesis [@Wooldridge:2013tj]. Increasing CO~2~-limitation for remaining symbionts, along with an amplified internal light environment due to reduced self-shading [@Enriquez:2005p142], may further exacerbate photooxidative stress and accelerate symbiont expulsion, driving the coral into a bleached state.
 
 While these positive feedbacks have been discussed previously in the literature, this is the first attempt to implement and explore their properties within a dynamical model. Interestingly, these feedbacks lead to alternate stable states in the symbiotic system. The 'healthy' state is characterized by nitrogen-limitation of both symbiont and host: under these conditions, the symbiont translocates sufficient carbon to support host growth and CCMs, which ensures that photosynthesis does not become CO~2~-limited. However, if carbon translocation is disrupted (and light is sufficiently high), then the system is driven into the 'bleached' state by photooxidative stress and positively reinforcing carbon- and CO~2~-limitation. In this context, coral bleaching can be understood as a transition from one stable state to another, and bleaching thresholds are sets of environmental conditions that push a healthy-state coral onto a trajectory leading to a bleached state. 
@@ -296,11 +300,13 @@ Whether this 'overshoot' occurs or not is determined by the relative availabilit
 These dynamics reveal that the re-establishment of nitrogen-limitation is the most important diagnostic of recovery to a 'healthy' state, as this is when positive growth rates are resumed. A high S:H biomass ratio alone does not necessarily indicate that a 'healthy' state has been reached, since the carbon-limited state may still persist (e.g. Fig. 8B, 8C). This could explain why corals that have recovered their symbiont populations after bleaching may still exhibit energetic deficits and physiological impacts, possibly for months to years [@Levitan:2014et, @Hughes:2013hd]). These findings suggest that host acquisition of carbon from a source other than the symbiont may be extremely important for the system to recover from bleaching. Indeed, host feeding has been shown to promote a more rapid return to pre-bleaching levels of key physiological parameters in recovering corals [@Connolly:2012ep]. Additional carbon sources for the host, such as direct uptake of dissolved organic carbon [@Levas:2015ic], may also promote more rapid recovery from a bleached state.
 
 # Conclusions
+
 This dynamic bioenergetic model of coral-*Symbiodinium* symbioses mechanistically reproduces patterns in steady-state coral growth and symbiont abundance commonly observed in corals, including higher symbiont abundance with higher nutrients and feeding, lower symbiont abundance with increasing light, and optimal growth at intermediate light levels. Moreover, the model reproduces complex dynamic behaviors including seasonal changes in symbiont density at different nutrient levels, rapid bleaching above a threshold of high light, mitigation of bleaching by heterotrophic feeding, exacerbation of bleaching by elevated nutrients, and an overshoot of symbiont density during recovery from bleaching. These examples demonstrate the model's ability to integrate multiple environmental forcing functions to reproduce complex responses; meanwhile, the diversity of these phenomena suggest the model has captured many of the important features of the system in a unifying mechanistic framework. This model also provides a new conceptual framework for considering coral bleaching as a transition to an alternate stable state, which has important implications for understanding the performance and maintenance of symbiotic interactions. In this context, the 'healthy' stable state represents a scenario in which nitrogen-limitation stabilizes the symbiont to host biomass ratio and maintains positive growth. Conversely, carbon-limitation represents a dysfunctional state wherein positive feedbacks result in a loss of photosynthetic capacity and negative growth. Importantly, these 'control' mechanisms arise entirely passively through feedbacks present in the system.
 
 In addition to the suite of specific examples presented here, the model can be used to explore many different dynamic environmental scenarios, and represents a tool that biologists and ecologists can use to generate hypotheses and make predictions in both experimental and natural settings. Moreover, parameter values can be modified to correspond to different genetic or functional types of coral hosts and *Symbiodinium* partners in order to evaluate variability in system responses. Thus, the diversity of potential applications for this model is high, and we envision this work as a foundation for continued development, which may include more detailed treatments of specific modules (e.g., DIC processing), and the incorporation of more external forcing capabilities (e.g., external DIC, temperature). Importantly, open source R code allows this effort to benefit from contributions from the wider scientific community, including those with empirical and theoretical backgrounds. Ultimately, the continued refinement of these tools is fundamental in elucidating the mechanisms of symbiosis function and dysfunction, and in predicting coral responses to environmental change.
 
 # Acknowledgements
+
 This work was supported by a NSF Postdoctoral Research Fellowship in Biology to RC (#1400787).
 
 References {#references .unnumbered}
